# companiesGuide

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: ef29e857426c_init.py
backend/app/: init_data.json
backend/app/db/: connect.py
backend/app/models/: __init__.py  activity_type.py  building.py  organization.py
backend/app/routes/: activities.py  buildings.py  orgs.py
backend/app/schemas/: buildings.py  organizations.py
backend/app/services/: activities.py  add_init_data.py  buildings.py  organizations.py
